--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1107,12 +1107,12 @@ components:
           items:
             $ref: '#/components/schemas/KeyValue'
         signalChannelInfos:
-          type: array
-          items:
+          type: object
+          additionalProperties:
             $ref: '#/components/schemas/ChannelInfo'
         internalChannelInfos:
-          type: array
-          items:
+          type: object
+          additionalProperties:
             $ref: '#/components/schemas/ChannelInfo'
     ChannelInfo:
       type: object
