IWF-274: provide option to optimize timers

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1429,6 +1429,8 @@ components:
           type: integer
         optimizeActivity:
           type: boolean
+        optimizeTimer:
+          type: boolean
     Context:
       type: object
       required:
