--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1470,6 +1470,8 @@ components:
           type: integer
         optimizeActivity:
           type: boolean
+        optimizeTimer:
+          type: boolean
     Context:
       type: object
       required:
