--- a/iwf.yaml
+++ b/iwf.yaml
@@ -874,7 +874,8 @@ components:
       enum:
         - STATE_DECISION_FAILING_WORKFLOW_ERROR_TYPE
         - CLIENT_API_FAILING_WORKFLOW_ERROR_TYPE
-        - STATE_API_ERROR
+        - STATE_API_FAIL_MAX_OUT_RETRY_ERROR_TYPE # deprecated
+        - STATE_API_FAIL_ERROR_TYPE
         - INVALID_USER_WORKFLOW_CODE_ERROR_TYPE
         - RPC_ACQUIRE_LOCK_FAILURE
         - SERVER_INTERNAL_ERROR_TYPE
