IWF-545: Extend IwfEvent with searchAttributes (#83)
* IWF-545: Extend IwfEvent with searchAttributes

* IWF-545: Change format from JSON to SearchAttribute list

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1539,3 +1539,7 @@ components:
         endTimestampInMs: # only applicable for certain events
           type: integer
           format: int64
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttribute'
