--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1539,6 +1539,13 @@ components:
         endTimestampInMs: # only applicable for certain events
           type: integer
           format: int64
+        error:
+          type: object
+          properties:
+            type:
+              type: string
+            details:
+              type: string
         searchAttributes:
           type: array
           items:
