--- a/iwf.yaml
+++ b/iwf.yaml
@@ -164,28 +164,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/v1/workflow/encodedobject/load: #calling this encoded, becuae it can be used for input or output.
-  post:
-    summary: "load encoded object from storage"
-    requestBody:
-      content:
-        application/json:
-          schema:
-            #make this an array to support batch loading
-            $ref: '#/components/schemas/EncodedObject'
-    responses:
-      '200':
-        description: successful operation
+  /api/v1/workflow/encodedobject/load: #calling this encoded, because it can be used for input or output.
+    post:
+      summary: "load encoded object from storage"
+      requestBody:
         content:
           application/json:
             schema:
+              #make this an array to support batch loading
               $ref: '#/components/schemas/EncodedObject'
-      '400':
-        description: Invalid input
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ErrorResponse'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EncodedObject'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/get:
     post:
       summary: "get a workflow's status and results(if completed & requested)"
